Update repo tree and gitignore rules

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
     "files.associations": {
-        "errors.h": "c"
+        "errors.h": "c",
+        "stdio.h": "c",
+        "ostream": "cpp",
+        "xor_swap.h": "c"
     }
 }
